[tool.poetry]
name = "investservice"
version = "0.0.1"
description = ""
authors = ["Kristoffer Dalby <kradalby@kradalby.no>"]

[tool.poetry.dependencies]
python = "^3.9"
investpy = "^1.0.7"
fastapi = {extras = ["all"], version = "^0.66.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
