[tool.poetry]
name = "investservice"
version = "0.0.1"
description = ""
authors = ["Kristoffer Dalby <kradalby@kradalby.no>"]

[tool.poetry.dependencies]
python = "^3.9"
investpy = "^1.0.7"
fastapi = {extras = ["all"], version = "^0.66.0"}
yfinance = "^0.1.63"
expiringdict = "^1.2.1"
prometheus-fastapi-instrumentator = "^5.7.1"
beautifulsoup4 = "^4.9.3"
absl-py = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
